fix footer overlapping text

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
   line-height: 1.5;
   color: var(--avali-orange);
   background: #000000;
+  padding-bottom: 1.5rem;
 }
 
 /* footer class */
@@ -18,6 +19,7 @@ body {
   position: fixed;
   left: 0;
   bottom: 0;
+  height: 1.5rem;
   width: 100%;
   background-color: var(--dark-grey);
   color: var(--avali-orange);
